--- a/index.html
+++ b/index.html
@@ -203,15 +203,15 @@
 
 
 	<div id="top" class="jumbotron" data-src="/view/images/metro_animation.gif" data-position="center right">
-				<a href="https://asimbhatia.me/"><img style="width: 5vw; display: block; float: left; margin: 40px; z-index: 100; position: absolute;" src="view/images/logoABWhiteTransparent.png"></a>
-				<div style="display: inline; z-index: 100; position: absolute; bottom: 40px; right: 40px;" class="resume-link"><a href="view/images/AsimResume10.pdf">R&eacute;sum&eacute;</a></div>
+				<a href="https://asimbhatia.me/"><img src="view/images/logoABWhiteTransparent.png"></a>
+				<div class="resume-link"><a href="view/images/AsimResume10.pdf">R&eacute;sum&eacute;</a></div>
 				<!-- <div class="scroll-down"><div class="glyphicon"></div><a href="#profile">&#8681;</a></div> -->
 				<a href="#profile" class="scroll-down">	
 					<span class="glyphicon glyphicon-chevron-down"></span>
 				</a>
 				<!-- transform: translateX(-50%); -->
 		<div class="overlay">
-			<div class="container" data-sal-duration="1200" data-sal="fade" data-sal-delay="300"
+			<div class="container" data-sal-duration="1600" data-sal="fade" data-sal-delay="300"
 				data-sal-easing="ease-in-bounce" style="font-family: 'Montserrat', sans-serif;">
 				<h1 style=" font-family: 'Montserrat', sans-serif; font-size: 8vw; text-transform: uppercase; font-weight: bold;"
 					class="colorPrint">Asim Bhatia</h1>
@@ -233,7 +233,7 @@
 
 
 	<div id="profile" style=" padding-bottom: 50px; z-index: 100;" class="background-white shadowWhite">
-		<div style="display: block" class="container" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="300"
+		<div style="display: block" class="container" data-sal-duration="1600" data-sal="fade" data-sal-delay="300"
 			data-sal-easing="ease-in-bounce">
 			<div class="row wow zoomIn" style="padding: 0%; padding-bottom: 20px; margin: 0%; display: inline">
 				<!-- <div class="col-md-4" style="padding: 0%; margin: 0%;">
@@ -265,7 +265,7 @@
 
 					</div>
 
-					<div style="font-weight: bold; width: 30%; margin: 0%; display: inline;" class="words words-1"
+					<div class="words words-1 wordAtt"
 						style=" text-align: center; bottom: 0%;">
 						<span>></span>
 						<span>></span>
@@ -361,14 +361,14 @@
 		<!-- <div class="overlayGradient">
 	</div> -->
 		<div id="projects" class="container-fluid overlayGradient">
-			<div class="container" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="300"
+			<div class="container" data-sal-duration="1600" data-sal="fade" data-sal-delay="300"
 				data-sal-easing="ease-in-bounce">
 				<div style="background-color: white;" class="shadow">
 					<h2 style="padding-top:20px;">Projects</h2>
 					<p class="lead" style="padding-bottom:20px; color: #c28aff;">Some Cool Stuff I've Done<br />
 					</p>
 				</div>
-				<hr style="border-color: rgb(255, 255, 255); border-width: 5px;">
+				<hr style="border-style: solid; opacity: 100%; border-color: rgb(255, 255, 255); border-width: 3px;">
 
 				<!-- <hr style="color: black;"> -->
 
@@ -420,7 +420,7 @@
 
 
 	<div>
-		<div id="experiences" class="container" style="color: rgb(255, 255, 255);" data-sal-duration="1200"
+		<div id="experiences" class="container" style="color: rgb(255, 255, 255);" data-sal-duration="1600"
 			data-sal="fade" data-sal-delay="300" data-sal-easing="ease-in-bounce">
 			<h2 style="color: rgb(255, 255, 255); text-align: left;">Experience</h2>
 			<p class="lead" style="color: #c28aff; text-align: left;">
@@ -551,7 +551,7 @@
 
 
 	<div class="background-black">
-		<div id="contact" class="container" data-sal-duration="1200" data-sal="fade" data-sal-delay="300"
+		<div id="contact" class="container" data-sal-duration="1600" data-sal="fade" data-sal-delay="300"
 			data-sal-easing="ease-in-bounce">
 			<div>
 				<h2>Contact</h2>
