change media stuff

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 				<h1 style=" font-family: 'Montserrat', sans-serif; font-size: 8vw; text-transform: uppercase; font-weight: bold;"
 					class="colorPrint">Asim Bhatia</h1>
 				<!-- <p style=" padding-top: 50px;">//<span id="cursor" class="text-monospace textstyle" style="font-size: 1.7vw;"></span></p> -->
-				<p class="textstyle shadowMiddle"
+				<p class="textstyle shadowMiddle typewriterText"
 					style="font-size: 1.5vw; text-align: center; margin-left: auto; margin-right: auto; margin-top: 50px;">
 					<span style="color: rgb(255, 255, 255);">I am a </span><span class="typed-text"
 						style="font-size: 1.5vw; color: #c28aff;"></span><span class="cursor"
