change media stuff and title

--- a/index.html
+++ b/index.html
@@ -213,8 +213,9 @@
 		<div class="overlay">
 			<div class="container" data-sal-duration="1600" data-sal="fade" data-sal-delay="300"
 				data-sal-easing="ease-in-bounce" style="font-family: 'Montserrat', sans-serif;">
-				<h1 style=" font-family: 'Montserrat', sans-serif; font-size: 8vw; text-transform: uppercase; font-weight: bold;"
-					class="colorPrint">Asim Bhatia</h1>
+				<h1 class="colorPrint">Asim Bhatia</h1>
+				<!-- <h1 class="colorPrint titleText">Asim Bhatia</h1> -->
+
 				<!-- <p style=" padding-top: 50px;">//<span id="cursor" class="text-monospace textstyle" style="font-size: 1.7vw;"></span></p> -->
 				<p class="textstyle shadowMiddle typewriterText"
 					style="font-size: 1.5vw; text-align: center; margin-left: auto; margin-right: auto; margin-top: 50px;">
