--- a/index.html
+++ b/index.html
@@ -99,9 +99,6 @@
 
 		<ul style="text-decoration: none" class="nav_links">
 			<li class="nav-item">
-				<a href="#top" class="nav-link">Home</a>
-			</li>
-			<li class="nav-item">
 				<a href="#profile" class="nav-link">Profile</a>
 			</li>
 			<li class="nav-item">
@@ -109,6 +106,9 @@
 			</li>
 			<li class="nav-item">
 				<a href="#experiences" class="nav-link">Experiences</a>
+			</li>
+			<li class="nav-item">
+				<a href="#abilities" class="nav-link">Abilities</a>
 			</li>
 			<li class="nav-item">
 				<a href="#contact" class="nav-link">Contact</a>
@@ -204,6 +204,9 @@
 
 	<div id="top" class="jumbotron" data-src="/view/images/metro_animation.gif" data-position="center right">
 				<a href="https://asimbhatia.me/"><img src="view/images/logoABWhiteTransparent.png"></a>
+				<!-- <div class="topShadow"></div>
+				<div class="leftShadow"></div>
+				<div class="rightShadow"></div> -->
 				<div class="resume-link"><a href="view/images/AsimResume10.pdf">R&eacute;sum&eacute;</a></div>
 				<!-- <div class="scroll-down"><div class="glyphicon"></div><a href="#profile">&#8681;</a></div> -->
 				<a href="#profile" class="scroll-down">	
@@ -218,7 +221,7 @@
 
 				<!-- <p style=" padding-top: 50px;">//<span id="cursor" class="text-monospace textstyle" style="font-size: 1.7vw;"></span></p> -->
 				<p class="textstyle shadowMiddle typewriterText"
-					style="font-size: 1.5vw; text-align: center; margin-left: auto; margin-right: auto; margin-top: 50px;">
+					style="font-size: 1.5vw; text-align: center; margin-left: auto; margin-right: auto; margin-top: 50px;" class="typewriterText">
 					<span style="color: rgb(255, 255, 255);">I am a </span><span class="typed-text"
 						style="font-size: 1.5vw; color: #c28aff;"></span><span class="cursor"
 						style="font-size: 1vw;">&nbsp;</span></p>
@@ -233,7 +236,7 @@
 
 
 
-	<div id="profile" style=" padding-bottom: 50px; z-index: 100;" class="background-white shadowWhite">
+	<div id="profile" style=" padding-bottom: 50px; z-index: 100;" class="background-whiteFancy shadowWhite">
 		<div style="display: block" class="container" data-sal-duration="1600" data-sal="fade" data-sal-delay="300"
 			data-sal-easing="ease-in-bounce">
 			<div class="row wow zoomIn" style="padding: 0%; padding-bottom: 20px; margin: 0%; display: inline">
@@ -551,6 +554,157 @@
 	</div>
 
 
+
+<div class="overlayGradientColor">
+	<div id="abilities" class="container"
+	data-sal-duration="1600" data-sal="fade" data-sal-delay="300" data-sal-easing="ease-in-bounce">
+		<h2>Abilities</h2>
+		<p class="lead" style="color: black;">What I'm Good At</p>
+		<hr />
+
+
+
+		<div class="containerC">
+			<div class="row">
+				<div class="col-xs-6 col-md-3">
+					<div class="card">
+						<div class="box">
+						  <div class="percent">
+							<svg>
+							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle cx="70" cy="70" r="70"></circle>
+							</svg>
+							<div class="number">
+							  <h2>2<span>yr</span></h2>
+							</div>
+							<h3>HTML</h3>
+						  </div>
+						</div>
+					  </div>
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<div class="card">
+						<div class="box">
+						  <div class="percent">
+							<svg>
+							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle cx="70" cy="70" r="70"></circle>
+							</svg>
+							<div class="number">
+							  <h2>2<span>yr</span></h2>
+							</div>
+							<h3>CSS</h3>
+						  </div>
+						</div>
+					  </div>
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<div class="card">
+						<div class="box">
+						  <div class="percent">
+							<svg>
+							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle cx="70" cy="70" r="70"></circle>
+							</svg>
+							<div class="number">
+							  <h2>3<span>yr</span></h2>
+							</div>
+							<h3>JavaScript</h3>
+						  </div>
+						</div>
+					  </div>
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<div class="card">
+						<div class="box">
+						  <div class="percent">
+							<svg>
+							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle cx="70" cy="70" r="70"></circle>
+							</svg>
+							<div class="number">
+							  <h2>1<span>yr</span></h2>
+							</div>
+							<h3>C</h3>
+						  </div>
+						</div>
+					  </div>
+				</div>
+			</div>
+	
+			<div class="row">
+				<div class="col-xs-6 col-md-3">
+					<div class="card">
+						<div class="box">
+						  <div class="percent">
+							<svg>
+							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle cx="70" cy="70" r="70"></circle>
+							</svg>
+							<div class="number">
+							  <h2>1<span>yr</span></h2>
+							</div>
+							<h3>C++</h3>
+						  </div>
+						</div>
+					  </div>
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<div class="card">
+						<div class="box">
+						  <div class="percent">
+							<svg>
+							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle cx="70" cy="70" r="70"></circle>
+							</svg>
+							<div class="number">
+							  <h2>2<span>yr</span></h2>
+							</div>
+							<h3>Java</h3>
+						  </div>
+						</div>
+					  </div>
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<div class="card">
+						<div class="box">
+						  <div class="percent">
+							<svg>
+							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle cx="70" cy="70" r="70"></circle>
+							</svg>
+							<div class="number">
+							  <h2>1<span>yr</span></h2>
+							</div>
+							<h3>Visual Basic</h3>
+						  </div>
+						</div>
+					  </div>
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<div class="card">
+						<div class="box">
+						  <div class="percent">
+							<svg>
+							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle cx="70" cy="70" r="70"></circle>
+							</svg>
+							<div class="number">
+							  <h2>1<span>yr</span></h2>
+							</div>
+							<h3>jQuery</h3>
+						  </div>
+						</div>
+					  </div>
+				</div>
+			</div>
+				
+	</div>
+</div>
+</div>
+
+
+
 	<div class="background-black">
 		<div id="contact" class="container" data-sal-duration="1600" data-sal="fade" data-sal-delay="300"
 			data-sal-easing="ease-in-bounce">
@@ -644,7 +798,7 @@
 	<script type="text/javascript" src="view/js/sal.js"></script>
 	<script>
 		sal({
-			threshold: 0.5,
+			threshold: 0.3,
 			once: false
 		});
 	</script>
