new navbar animation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link href="view/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="view/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="view/animate.css">
+	
 
 	<link rel="shortcut icon" href="favicon-16x16.png" type="image/png" />
 
@@ -90,11 +91,25 @@
 		
 	</section> -->
 
+	
+
 	<nav class="navbarBar" style="z-index: 999;">
+
+		
+
 		<div class="hamburger-menu">
-			<div class="line line-1"></div>
+
+			<div class="wrapper">
+				<button class="nav">
+					<span></span>
+					<span></span>
+					<span></span>
+				</button>
+			</div>
+
+			<!-- <div class="line line-1"></div>
 			<div class="line line-2"></div>
-			<div class="line line-3"></div>
+			<div class="line line-3"></div> -->
 		</div>
 
 		<ul style="text-decoration: none" class="nav_links">
@@ -291,6 +306,8 @@
 
 
 
+			
+			
 			<hr style="clear: none; padding: 0%; margin: 0%;">
 
 			<div class="row" style="padding-top: 50px; text-align: left;">
@@ -572,7 +589,7 @@
 						  <div class="percent">
 							<svg>
 							  <circle cx="70" cy="70" r="70"></circle>
-							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle class = "canim" cx="70" cy="70" r="70"></circle>
 							</svg>
 							<div class="number">
 							  <h2>2<span>yr</span></h2>
@@ -588,7 +605,7 @@
 						  <div class="percent">
 							<svg>
 							  <circle cx="70" cy="70" r="70"></circle>
-							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle class = "canim" cx="70" cy="70" r="70"></circle>
 							</svg>
 							<div class="number">
 							  <h2>2<span>yr</span></h2>
@@ -604,7 +621,7 @@
 						  <div class="percent">
 							<svg>
 							  <circle cx="70" cy="70" r="70"></circle>
-							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle class = "canim" cx="70" cy="70" r="70"></circle>
 							</svg>
 							<div class="number">
 							  <h2>3<span>yr</span></h2>
@@ -620,7 +637,7 @@
 						  <div class="percent">
 							<svg>
 							  <circle cx="70" cy="70" r="70"></circle>
-							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle class = "canim" cx="70" cy="70" r="70"></circle>
 							</svg>
 							<div class="number">
 							  <h2>1<span>yr</span></h2>
@@ -639,7 +656,7 @@
 						  <div class="percent">
 							<svg>
 							  <circle cx="70" cy="70" r="70"></circle>
-							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle class = "canim" cx="70" cy="70" r="70"></circle>
 							</svg>
 							<div class="number">
 							  <h2>1<span>yr</span></h2>
@@ -655,7 +672,7 @@
 						  <div class="percent">
 							<svg>
 							  <circle cx="70" cy="70" r="70"></circle>
-							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle class = "canim" cx="70" cy="70" r="70"></circle>
 							</svg>
 							<div class="number">
 							  <h2>2<span>yr</span></h2>
@@ -671,7 +688,7 @@
 						  <div class="percent">
 							<svg>
 							  <circle cx="70" cy="70" r="70"></circle>
-							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle class = "canim" cx="70" cy="70" r="70"></circle>
 							</svg>
 							<div class="number">
 							  <h2>1<span>yr</span></h2>
@@ -687,7 +704,7 @@
 						  <div class="percent">
 							<svg>
 							  <circle cx="70" cy="70" r="70"></circle>
-							  <circle cx="70" cy="70" r="70"></circle>
+							  <circle class = "canim" cx="70" cy="70" r="70"></circle>
 							</svg>
 							<div class="number">
 							  <h2>1<span>yr</span></h2>
@@ -795,6 +812,8 @@
 	<script type="text/javascript" src="view/js/script.js"></script>
 	<script type="text/javascript" src="view/js/bootstrap.min.js"></script>
 
+	<script type="text/javascript" src="view/js/waypoint.js"></script>
+
 	<script type="text/javascript" src="view/js/sal.js"></script>
 	<script>
 		sal({
@@ -812,6 +831,7 @@
 			$(".loader-wrapper").fadeOut("slow");
 		});
 	</script>
+	<script> Splitting(); </script>
 </body>
 
 </html>
