new navbar animation

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				<a href="#experiences" class="nav-link">Experiences</a>
 			</li>
 			<li class="nav-item">
-				<a href="#abilities" class="nav-link">Abilities</a>
+				<a href="#abilities" class="nav-link">Skills</a>
 			</li>
 			<li class="nav-item">
 				<a href="#contact" class="nav-link">Contact</a>
@@ -146,7 +146,7 @@
 
 
 	<!-- <header
-		style="border-style: solid; border-color: #c28aff; border-top: none; border-right: none; border-left: none; position: sticky; padding-left: 0px; padding-right: 0px; display: block; width: 100%; background-color: black; z-index: 100; top: 0px; padding-top: 9px; padding-bottom: 1px; margin-bottom: 0px;">
+		style="border-style: solid; border-color: #3adbe0; border-top: none; border-right: none; border-left: none; position: sticky; padding-left: 0px; padding-right: 0px; display: block; width: 100%; background-color: black; z-index: 100; top: 0px; padding-top: 9px; padding-bottom: 1px; margin-bottom: 0px;">
 
 		<nav>
 			<ul class="nav_links"> <strong><span
@@ -238,7 +238,7 @@
 				<p class="textstyle shadowMiddle typewriterText"
 					style="font-size: 1.5vw; text-align: center; margin-left: auto; margin-right: auto; margin-top: 50px;" class="typewriterText">
 					<span style="color: rgb(255, 255, 255);">I am a </span><span class="typed-text"
-						style="font-size: 1.5vw; color: #c28aff;"></span><span class="cursor"
+						style="font-size: 1.5vw; color: #3adbe0;"></span><span class="cursor"
 						style="font-size: 1vw;">&nbsp;</span></p>
 			</div>
 		</div>
@@ -257,7 +257,7 @@
 			<div class="row wow zoomIn" style="padding: 0%; padding-bottom: 20px; margin: 0%; display: inline">
 				<!-- <div class="col-md-4" style="padding: 0%; margin: 0%;">
 					<h2 class="wow zoomIn" style="padding-top: 40px; text-align: left">Profile</h2>
-					<p class="wow zoomIn lead" style="color: #c28aff; text-align: left">Undergraduate Student</p>
+					<p class="wow zoomIn lead" style="color: #3adbe0; text-align: left">Undergraduate Student</p>
 
 				</div>
 				<div class="col-md-4" style="padding: 0%; margin: 0%;">
@@ -270,7 +270,7 @@
 				</div>
 				<div class="col-md-4" style="padding: 0%; margin: 0%; padding-top: 30px;">
 					<img class="shadow"
-						style="width: 130px; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: 7px; border-color: #c28aff; border-style: solid;"
+						style="width: 130px; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: 7px; border-color: #3adbe0; border-style: solid;"
 						src="view/images/profilePic.png">
 				</div> -->
 
@@ -292,11 +292,11 @@
 						<span>></span>
 					</div>
 					<img class="shadow"
-						style="width: 13vw; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: .7vw; border-color: #c28aff; border-style: solid;"
+						style="width: 13vw; float: right; padding:0%; margin: 0%; display: inline; border-radius: 50%; border-width: .7vw; border-color: #3adbe0; border-style: solid;"
 						src="view/images/profilePic.png">
 				</div>
 				<p class="lead"
-					style="color: #c28aff; text-align: left; width: fit-content; display:block; clear: left;">
+					style="color: #3adbe0; text-align: left; width: fit-content; display:block; clear: left;">
 					Undergraduate
 					Student
 				</p>
@@ -386,7 +386,7 @@
 				data-sal-easing="ease-in-bounce">
 				<div style="background-color: white;" class="shadow">
 					<h2 style="padding-top:20px;">Projects</h2>
-					<p class="lead" style="padding-bottom:20px; color: #c28aff;">Some Cool Stuff I've Done<br />
+					<p class="lead" style="padding-bottom:20px; color: #3adbe0;">Some Cool Stuff I've Done<br />
 					</p>
 				</div>
 				<hr style="border-style: solid; opacity: 100%; border-color: rgb(255, 255, 255); border-width: 3px;">
@@ -444,7 +444,7 @@
 		<div id="experiences" class="container" style="color: rgb(255, 255, 255);" data-sal-duration="1600"
 			data-sal="fade" data-sal-delay="300" data-sal-easing="ease-in-bounce">
 			<h2 style="color: rgb(255, 255, 255); text-align: left;">Experience</h2>
-			<p class="lead" style="color: #c28aff; text-align: left;">
+			<p class="lead" style="color: #3adbe0; text-align: left;">
 				What I Do
 			</p>
 
@@ -575,8 +575,8 @@
 <div class="overlayGradientColor">
 	<div id="abilities" class="container"
 	data-sal-duration="1600" data-sal="fade" data-sal-delay="300" data-sal-easing="ease-in-bounce">
-		<h2>Abilities</h2>
-		<p class="lead" style="color: black;">What I'm Good At</p>
+		<h2 style="font-size: 70px;">Skills</h2>
+		<p class="lead" style="color: rgb(105, 105, 105);">What I'm Good At</p>
 		<hr />
 
 
@@ -722,12 +722,12 @@
 
 
 
-	<div class="background-black">
+	<div class="overlayGradientColorContact">
 		<div id="contact" class="container" data-sal-duration="1600" data-sal="fade" data-sal-delay="300"
 			data-sal-easing="ease-in-bounce">
 			<div>
 				<h2>Contact</h2>
-				<p class="lead wow fadeIn" style="color: #c28aff;">
+				<p class="lead wow fadeIn" style="color: #3adbe0;">
 					<!-- &ldquo;Li'l Kodak they don't like to see you winnin',
 	they wanna see you in a penitentiary &rdquo;<br />- Kodak Black -->
 					Personal Info
@@ -768,7 +768,7 @@
 					<div class="col-md-2" style="text-align: center;">
 						<a href="https://github.com/AsimBhatia" target="_blank">
 							<img style="width: 55px; display: inline;"
-								src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuh7P_-HlqG79O5NKipWod9MM5bmlAdN0KsYWtpj9KVGicnK-1&s">
+								src="https://www.clever-cloud.com/images/home/github-icon.svg">
 							<!-- <span class="icon icon-linkedin"></span> --> </a>
 
 					</div>
@@ -825,7 +825,7 @@
 
 
 
-	<footer style="color: black; padding: 12px; background-color: #c28aff"> | &#169; 2020 Asim Bhatia | </footer>
+	<footer style="color: black; padding: 12px; background-color: #3adbe0"> | &#169; 2020 Asim Bhatia | </footer>
 	<script>
 		$(window).on("load",function(){
 			$(".loader-wrapper").fadeOut("slow");
