--- a/index.html
+++ b/index.html
@@ -305,11 +305,10 @@
 				<!-- <h1 class="colorPrint titleText">Asim Bhatia</h1> -->
 
 				<!-- <p style=" padding-top: 50px;">//<span id="cursor" class="text-monospace textstyle" style="font-size: 1.7vw;"></span></p> -->
-				<p class="textstyle shadowMiddle typewriterText"
-					style="font-size: 1.5vw; text-align: center; margin-left: auto; margin-right: auto; margin-top: 100px;" class="typewriterText">
-					<span style="color: rgb(255, 255, 255);">I am a </span><span class="typed-text"
-						style="font-size: 1.5vw; color: #3adbe0;"></span><span class="cursor"
-						style="font-size: 1vw;">&nbsp;</span></p>
+				<p class="textstyle shadowMiddle" class="typeFont"
+					style="text-align: center; margin-left: auto; margin-right: auto; ">
+					<span class="typeFont" style="color: rgb(255, 255, 255);">I am a </span><span class="typed-text typeFont"
+						style="color: #3adbe0;"></span><span class="cursor typeFontBlink">&nbsp;</span></p>
 			</div>
 		</div>
 
